p3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/secure-redirect: "true"  # Eğer HTTPS yönlendirmesi istiyorsanız
    traefik.ingress.kubernetes.io/ssl-redirect: "true"     # Eğer SSL kullanıyorsanız
spec:
  rules:
  - host: argocd.acetin.com # Buraya kendi alan adınızı yazın
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443 # Argo CD'nin HTTPS portu
 # tls:
 # - hosts:
 #   - argocd.yourdomain.com # Buraya kendi alan adınızı yazın
#    secretName: argocd-tls-secret # TLS için kullanacağınız Secret adı
